issue21 profile left align-> center debug

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ input[type="submit"]:hover {
 .info{
     font-size: larger;
     width: 50%;
-    margin-left: 40%;    
+    margin-left: 35%;    
     margin-right: 25%; 
     text-align: left;   
 }
